--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -38,7 +38,7 @@ block main
             div(class="form-group")
                 label(for="description") Mô tả
                 textarea(
-                    class="form-control"
+                    class="form-control text-mce"
                     id="description"
                     name="description"
                     placeholder="Mô tả..."
@@ -134,6 +134,6 @@ block main
                     class="form-check-label"
                     ) Dừng hoạt động
             br
-            button(type="submit" class="btn btn-primary") Tạo mới
+            button(type="submit" class="btn btn-primary mt-3") Tạo mới
     else 
-        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền.
