--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -45,7 +45,7 @@ block main
             div(class="form-group")
                 label(for="description") Mô tả
                 textarea(
-                    class="form-control"
+                    class="form-control text-mce"
                     id="description"
                     name="description"
                     placeholder="Mô tả..."
