--- a/views/admin/pages/roles/permission.pug
+++ b/views/admin/pages/roles/permission.pug
@@ -74,6 +74,61 @@ block main
                             td(class="text-center")
                                 input(type="checkbox" checked = (record.permission.includes("product_restore") ? true : false))
 
+                    //- Danh mục bài viết
+                    tr 
+                        td(colspan='4')
+                            b Danh mục bài viết
+                    tr(data-name="article-category_view")
+                        td Xem 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article-category_view") ? true : false))
+                    tr(data-name="article-category_create")
+                        td Thêm mới 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article-category_create") ? true : false))
+                    tr(data-name="article-category_edit")
+                        td Chỉnh sửa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article-category_edit") ? true : false))
+                    tr(data-name="article-category_delete")
+                        td Xóa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article-category_delete") ? true : false))
+
+                    //- Bài viết
+                    tr 
+                        td(colspan='4')
+                            b Bài viết
+                    tr(data-name="article_view")
+                        td Xem 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article_view") ? true : false))
+                    tr(data-name="article_create")
+                        td Thêm mới 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article_create") ? true : false))
+                    tr(data-name="article_edit")
+                        td Chỉnh sửa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article_edit") ? true : false))
+                    tr(data-name="article_delete")
+                        td Xóa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article_delete") ? true : false))
+                    tr(data-name="article_restore")
+                        td Khôi phục
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("article_restore") ? true : false))
+
                     //- Nhóm quyền
                     tr 
                         td(colspan='4')
