--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,6 +12,14 @@
                 li 
                     a(href=`${prefixAdmin}/products`) Sản phẩm
 
+            if (roles.permission.includes('article-category_view'))
+                li 
+                    a(href=`${prefixAdmin}/articles-category`) Danh mục bài viết
+
+            if (roles.permission.includes('article_view'))
+                li 
+                    a(href=`${prefixAdmin}/articles`) Bài viết
+
             if (roles.permission.includes('role_view'))
                 li  
                     a(href=`${prefixAdmin}/roles`) Nhóm quyền
