--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -134,14 +134,14 @@ block main
                                         if(products[i].status == 'active')
                                             a( 
                                                 href='javascript:;'
-                                                class="badge badge-success"
+                                                class="badge badge-success col-10"
                                                 id = products[i]._id
                                                 status= products[i].status
                                             ) Hoạt động
                                         else
                                             a(
                                                 href='javascript:;'
-                                                class="badge badge-danger"
+                                                class="badge badge-danger col-10"
                                                 id = products[i]._id
                                                 status= products[i].status
                                             ) Dừng hoạt động
@@ -150,12 +150,12 @@ block main
                                         if(products[i].status == 'active')
                                             a( 
                                                 href='javascript:;'
-                                                class="badge badge-success"
+                                                class="badge badge-success col-10"
                                             ) Hoạt động
                                         else
                                             a(
                                                 href='javascript:;'
-                                                class="badge badge-danger"
+                                                class="badge badge-danger col-10"
                                             ) Dừng hoạt động
 
 
