--- a/views/admin/pages/article-category/edit.pug
+++ b/views/admin/pages/article-category/edit.pug
@@ -1,17 +1,18 @@
 extends ../../layouts/default.pug 
 include ../../mixins/notification-error.pug
+include ../../mixins/notification-success.pug
 include ../../mixins/tree-level-category.pug
 
 block main 
-    if (roles.permission.includes('product-category_create'))
+    if (roles.permission.includes('article-category_edit'))
         +notification-error(messages.error)
+        +notification-success(messages.success)
 
-        h1(class="mb-4") Thêm mới danh mục sản phẩm
+        h1(class="mb-4") Chỉnh sửa danh mục bài viết
         form(
-            action="/admin/products-category/create"
+            action=`/admin/articles-category/edit/${articleCategory.id}?_method=PATCH`
             method="POST"
-            id="form-create-product-category"
-            enctype="multipart/form-data" 
+            id="form-edit-article-category"
         )
 
             div(class="form-group")
@@ -22,6 +23,7 @@ block main
                     id="title"
                     name="title"
                     placeholder="Tên danh mục..."
+                    value=articleCategory.title
                     required
                 )
 
@@ -32,8 +34,10 @@ block main
                     id="parentId"
                     name="parentId"
                 )
-                    option(value="") --Chọn danh mục cha --     
-                    +tree-level-category(parentsCategory, 1)
+                    option(
+                        value=""
+                    ) --Chọn danh mục cha --
+                    +tree-level-category(parentsCategory, 1, articleCategory.parentId)    
 
 
             div(class="form-group")
@@ -44,26 +48,7 @@ block main
                     name="description"
                     placeholder="Mô tả..."
                     rows="5"
-                )
-
-            div(class="form-group")
-                label(for="thumbnail") Ảnh
-                input(
-                    type="file"
-                    class="form-control-file"
-                    id="thumbnail"
-                    name="thumbnail"
-                    placeholder="image.jpg"
-                    accept="image/*"
-                )
-                div(class="preview")
-                    img(
-                        id="preview-image"
-                        class="img-thumbnail"
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxKjw7UKMErGf4sBC7uz44m65E6QemoO7Tbw&s"
-                        width="150px"
-                    )
-                    a(class="btn btn-danger btn-sm" deleted) x
+                ) #{articleCategory.description}
 
             div(class="form-group")
                 label(for="position") Vị trí
@@ -74,6 +59,7 @@ block main
                     name="position"
                     min="0"
                     placeholder="Tự động tăng"
+                    value=articleCategory.position
                 )
 
             div(class="form-check form-check-inline")
@@ -83,7 +69,7 @@ block main
                         name="status" 
                         id="active" 
                         value="active"
-                        checked
+                        checked = (articleCategory.status == 'active' ? true : false)
                     ) 
                     label(for="active" 
                     class="form-check-label"
@@ -95,11 +81,12 @@ block main
                         name="status" 
                         id="inactive" 
                         value="inactive"
+                        checked = (articleCategory.status == 'inactive' ? true : false)
                     ) 
                     label(for="inactive" 
                     class="form-check-label"
                     ) Dừng hoạt động
             br
-            button(type="submit" class="btn btn-primary") Tạo mới
-    else 
-        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'/>Hoàng Minh Khương</a> để được cấp quyền
+            button(type="submit" class="btn btn-primary mt-2") Cập nhật
+    else    
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền
