--- a/views/admin/pages/article-category/index.pug
+++ b/views/admin/pages/article-category/index.pug
@@ -7,8 +7,8 @@ include ./../../mixins/notification-error.pug
 include ./../../mixins/record-level-table.pug
 
 block main 
-    if (roles.permission.includes('product-category_view'))
-        h1(class="mb-4") Danh mục sản phẩm 
+    if (roles.permission.includes('article-category_view'))
+        h1(class="mb-4") Danh mục bài viết
 
         //- notification
         +notification-success(messages.success)
@@ -32,8 +32,8 @@ block main
             .card-header Danh sách
                 .row 
                     .col-7
-                        if (roles.permission.includes('product-category_edit') || roles.permission.includes('product-category_delete'))
-                            +form-change-multi('products-category', filterStatus)
+                        if (roles.permission.includes('article-category_edit') || roles.permission.includes('article-category_delete'))
+                            +form-change-multi('articles-category', filterStatus)
                     
                     .col-2
                         select(class="form-control dropdown-toggle" name="type" sort)
@@ -42,12 +42,12 @@ block main
                             option(value="position-desc") Vị trí giảm dần  
                             option(value="title-asc")  Tên: A - Z
                             option(value="title-desc") Tên: Z - A  
-                    if (roles.permission.includes('product-category_create'))
+                    if (roles.permission.includes('article-category_create'))
                         .col-3
                             a(
                                 type="button" 
                                 class=`btn btn-outline-success mr-1 alert-success`
-                                href=`${prefixAdmin}/products-category/create`
+                                href=`${prefixAdmin}/articles-category/create`
                                 button-add
                             )  + Thêm mới
                     
@@ -55,7 +55,7 @@ block main
                 table(class="table table-hover table-sm" checbox-multi)
                     thead
                         tr
-                            if (roles.permission.includes('product-category_edit') || roles.permission.includes('product-category_delete'))
+                            if (roles.permission.includes('article-category_edit') || roles.permission.includes('article-category_delete'))
                                 th(class="form-check") 
                                     input(
                                         type="checkbox" 
@@ -64,7 +64,6 @@ block main
                                     )
                             
                             th(class='text-center') STT
-                            th(class='text-center') Hình ảnh 
                             th(class='text-left') Tiêu đề
                             th(class='text-center') Vị trí
                             th(class='text-center') Trạng thái
@@ -72,7 +71,7 @@ block main
                             th(class='text-left') Người cập nhật
                             th(class='text-center') Hành Động
                     tbody
-                        - let middle_path = 'products-category' 
+                        - let middle_path = 'articles-category' 
                         +record-level-table(records, 1, middle_path)
 
 
@@ -80,14 +79,14 @@ block main
             id='form-change-status-product'
             method='POST'
             action=""
-            path=`${prefixAdmin}/products-category/change-status`
+            path=`${prefixAdmin}/articles-category/change-status`
         )
 
         form(
             id='form-delete-product'
             method='POST'
             action=""
-            path=`${prefixAdmin}/products-category/delete`
+            path=`${prefixAdmin}/articles-category/delete`
         )
 
         script(type='text/javascript' src="/admin/js/product.js")
